9-rancher/nginx/deploy-smart.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: curso

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: dockertcu/nginx-smart
          ports:
            - containerPort: 80
