9-rancher/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: curso
  annotations:
    http.port: "9999"
spec:
  rules:
  - host: teste.nginx
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8099
